--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "mocha": "^10.1.0",
     "typescript": "^4.9.4",
     "@vscode/test-electron": "^2.2.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/renatodex/tendadogoblin-toolbelt-vscode.git"
   }
 }
